// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment deals with custom style 1`] = `
<div>
  <p
    style="custom: true;"
  >
    &lt;http://example.com/#bla&gt;
  </p>
</div>
`;

exports[`Comment deals with missing container 1`] = `
<div>
  <p
    style="padding: var(--sui-button-padding, 0.7em); border: none; font-size: 100%; white-space: pre-wrap;"
  >
    &lt;http://example.com/#bla&gt;
  </p>
</div>
`;

exports[`Comment deals with missing content 1`] = `
<div>
  <p
    style="padding: var(--sui-button-padding, 0.7em); border: none; font-size: 100%; white-space: pre-wrap;"
  >
    Error: No contents in comment field.
  </p>
</div>
`;

exports[`Comment deals with missing field params in non-bottom field type 1`] = `
<div>
  <undefined>
    &lt;http://example.com/#bla&gt;
  </undefined>
</div>
`;

exports[`Comment runs 1`] = `
<div>
  <p
    style="padding: var(--sui-button-padding, 0.7em); border: none; font-size: 100%; white-space: pre-wrap;"
  >
    &lt;http://example.com/#bla&gt;
  </p>
</div>
`;
